landing,login page,signup,forget fixed alignment for android and window

--- a/mobileapp/src/pages/forget/forget.scss
+++ b/mobileapp/src/pages/forget/forget.scss
@@ -3,7 +3,8 @@ page-forget {
   
    .scroll-content {
     padding: 0 !important;
-        background: #329CD6;
+    background: #329CD6;
+    overflow-y: auto !important;
 }
 .signin-process {
     padding: 16px;
