--- a/mobileapp/src/pages/landing/landing.scss
+++ b/mobileapp/src/pages/landing/landing.scss
@@ -5,6 +5,7 @@ page-landing {
 		background-size: cover;
 
 		.scroll-content{
+			overflow-y: auto !important;
 			background-color: transparent;
 			.l-buttons .login-btn {
 				width: 100%;font-size: 15px;padding: 30px 10px;font-family: 'sf_pro_displayregular';	
